FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Types_of_portals_required__c.field-meta.xml
<CustomField>
    <fullName>Types_of_portals_required__c</fullName>
    <description>BOPI-492: Type of portal setup</description>
    <inlineHelpText>Type of portal setup</inlineHelpText>
    <label>Types of portals required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross Border</fullName>
            </value>
            <value>
                <fullName>Same Currency (Domestic Payments, NOT CRS)</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>