FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Upload_MIDs__c.field-meta.xml
<CustomField>
    <fullName>Upload_MIDs__c</fullName>
    <description>BOPI-492: Do we have a fully executed First Data agreement and MIDs from First Data?</description>
    <inlineHelpText>SFS only</inlineHelpText>
    <label>Upload MIDs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>