FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Who_Gave_Demo__c.field-meta.xml
<CustomField>
    <fullName>Who_Gave_Demo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BOPI-492: Who did the demo with the institution?</description>
    <inlineHelpText>Who did the demo with the institution?</inlineHelpText>
    <label>Who Gave Demo?</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Build_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>