FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Who_Was_Involved_In_The_Call__c.field-meta.xml
<CustomField>
    <fullName>Who_Was_Involved_In_The_Call__c</fullName>
    <description>BOPI-492: Who Was Involved In The Call</description>
    <inlineHelpText>Who Was Involved In The Call</inlineHelpText>
    <label>Who Was Involved In The Call?</label>
    <type>TextArea</type>
</CustomField>