FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Will_we_be_migrating_historical_payment__c.field-meta.xml
<CustomField>
    <fullName>Will_we_be_migrating_historical_payment__c</fullName>
    <description>BOPI-534. For Healthcare.</description>
    <label>Will we be migrating hist. pymt plans?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>