FLY wire David/force-app/main/default/objects/Build_Request__c/recordTypes/Healthcare.recordType-meta.xml
<RecordType>
    <fullName>Healthcare</fullName>
    <active>true</active>
    <label>Healthcare</label>
</RecordType>