FLY wire David/force-app/main/default/objects/Build_Request__c/recordTypes/Travel.recordType-meta.xml
<RecordType>
    <fullName>Travel</fullName>
    <active>true</active>
    <label>Travel</label>
</RecordType>