FLY wire David/force-app/main/default/objects/Build_Request__c/listViews/ALL_BR.listView-meta.xml
<ListView>
    <fullName>ALL_BR</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Build Requests</label>
</ListView>